--- a/gb/16/10/20/n8413914.md
+++ b/gb/16/10/20/n8413914.md
@@ -1,8 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加拿大10月租金急升 租房市场或持续紧俏</h2>
-
 <h6></h6>
 <hr>
 <p>【大纪元2016年10月20日讯】（大纪元记者周行多伦多报道）一份10月全国租金报告显示，温哥华房市销售量连续2个月大幅下降的同时，房屋出租市场租金蹿升，多伦多也不例外。有行家担心，租房市场会持续紧俏。</p>
@@ -20,9 +19,7 @@
 <td width="\&quot;114\&quot;">1睡房租金</td>
 <td width="\&quot;114\&quot;">月变化</td>
 <td width="\&quot;114\&quot;">2睡房租金</td>
-<td width="\&quot;114\&quot;">月变化</td>
 </tr>
-<tr>
 <td width="\&quot;114\&quot;">1</td>
 <td width="\&quot;114\&quot;">0</td>
 <td width="\&quot;114\&quot;">温哥华</td>
@@ -30,35 +27,21 @@
 <td width="\&quot;114\&quot;">2.9%</td>
 <td width="\&quot;114\&quot;">$2,800</td>
 <td width="\&quot;114\&quot;">4.5%</td>
-</tr>
-<tr>
 <td width="\&quot;114\&quot;">2</td>
-<td width="\&quot;114\&quot;">0</td>
 <td width="\&quot;114\&quot;">多伦多</td>
 <td width="\&quot;114\&quot;">article content begin -->,370</td>
 <td width="\&quot;114\&quot;">4.6%</td>
 <td width="\&quot;114\&quot;">article content begin -->,760</td>
 <td width="\&quot;114\&quot;">4.8%</td>
-</tr>
-<tr>
 <td width="\&quot;114\&quot;">3</td>
-<td width="\&quot;114\&quot;">0</td>
 <td width="\&quot;114\&quot;">维多利亚</td>
 <td width="\&quot;114\&quot;">article content begin -->,130</td>
-<td width="\&quot;114\&quot;">4.6%</td>
 <td width="\&quot;114\&quot;">article content begin -->,400</td>
-<td width="\&quot;114\&quot;">4.5%</td>
-</tr>
-<tr>
 <td width="\&quot;114\&quot;">4</td>
-<td width="\&quot;114\&quot;">1</td>
 <td width="\&quot;114\&quot;">蒙特娄</td>
 <td width="\&quot;114\&quot;">article content begin -->,070</td>
 <td width="\&quot;114\&quot;">3.9%</td>
 <td width="\&quot;114\&quot;">article content begin -->,380</td>
-<td width="\&quot;114\&quot;">4.5%</td>
-</tr>
-<tr>
 <td width="\&quot;114\&quot;">5</td>
 <td width="\&quot;114\&quot;">-1</td>
 <td width="\&quot;114\&quot;">卡尔加里</td>
@@ -66,112 +49,71 @@
 <td width="\&quot;114\&quot;">-0.9%</td>
 <td width="\&quot;114\&quot;">article content begin -->,230</td>
 <td width="\&quot;114\&quot;">-2.4%</td>
-</tr>
-<tr>
 <td width="\&quot;114\&quot;">8</td>
-<td width="\&quot;114\&quot;">3</td>
 <td width="\&quot;114\&quot;">奥沙瓦</td>
 <td width="\&quot;114\&quot;">$980</td>
-<td width="\&quot;114\&quot;">4.8%</td>
 <td width="\&quot;114\&quot;">article content begin -->,250</td>
 <td width="\&quot;114\&quot;">2.5%</td>
-</tr>
-<tr>
 <td width="\&quot;114\&quot;">10</td>
-<td width="\&quot;114\&quot;">3</td>
 <td width="\&quot;114\&quot;">汉密尔顿</td>
 <td width="\&quot;114\&quot;">$950</td>
 <td width="\&quot;114\&quot;">2.7%</td>
 <td width="\&quot;114\&quot;">article content begin -->,100</td>
 <td width="\&quot;114\&quot;">0%</td>
-</tr>
-<tr>
-<td width="\&quot;114\&quot;">10</td>
 <td width="\&quot;114\&quot;">6</td>
 <td width="\&quot;114\&quot;">基奇纳</td>
-<td width="\&quot;114\&quot;">$950</td>
 <td width="\&quot;114\&quot;">4.4%</td>
 <td width="\&quot;114\&quot;">article content begin -->,080</td>
 <td width="\&quot;114\&quot;">4.3%</td>
-</tr>
 </tbody>
 </table>
 <p>表2：前5个月的1睡房租金情况，可见温哥华已是连续2个月上升，多伦多是首次大幅上升（4.6%）。</p>
-<table>
-<tbody>
-<tr>
 <td width="\&quot;266\&quot;">月份</td>
 <td width="\&quot;266\&quot;">温哥华1睡房租金</td>
 <td width="\&quot;266\&quot;">多伦多1睡房租金</td>
-</tr>
-<tr>
 <td width="\&quot;266\&quot;">6</td>
 <td width="\&quot;266\&quot;">article content begin -->,700</td>
 <td width="\&quot;266\&quot;">article content begin -->,320</td>
-</tr>
-<tr>
 <td width="\&quot;266\&quot;">7</td>
 <td width="\&quot;266\&quot;">article content begin -->,740</td>
 <td width="\&quot;266\&quot;">article content begin -->,350</td>
-</tr>
-<tr>
 <td width="\&quot;266\&quot;">8</td>
-<td width="\&quot;266\&quot;">article content begin -->,700</td>
 <td width="\&quot;266\&quot;">article content begin -->,330</td>
-</tr>
-<tr>
 <td width="\&quot;266\&quot;">9</td>
 <td width="\&quot;266\&quot;">article content begin -->,750</td>
 <td width="\&quot;266\&quot;">article content begin -->,310</td>
-</tr>
-<tr>
 <td width="\&quot;266\&quot;">10</td>
 <td width="\&quot;266\&quot;">article content begin -->,800</td>
 <td width="\&quot;266\&quot;">article content begin -->,370</td>
-</tr>
-</tbody>
-</table>
 <p>温哥华租金更早开始上升，与其房市成交量大幅下降的时间对应。多伦多房市没出现销售量下降的问题，但联邦政府最近实施的新政策，要求买保险的房贷申请都要通过压力测试，就是使用央行5年固定利率（9月28日是4.64%）来审核申请人的还款能力，此举会使买家的购买能力降低。</p>
 <p><strong><b>出租房源呈下降趋势</b></strong></p>
 <p>多伦多房市近几年都存在房源供不应求的问题，促使房价持续上升，尤其是单家庭房型。住房出租市场也有类似现象，按多伦多地产局第二季度的出租市场报告，在MLS系统登记的租房交易中，公寓挂牌数量比去年同期下降19.3%，成功出租数量下降2.7%；镇屋挂牌数量同比下降4%，成功出租数量上升10.2%。</p>
 <p>按加拿大按揭及住房公司（CMHC）9月份的报告，加拿大新屋开工量已出现下降趋势。</p>
 <p>表3：2016年加拿大城市新屋开工量（CMHC）（单位：单元）</p>
-<table>
-<tbody>
-<tr>
 <td width="\&quot;133\&quot;">城市</td>
 <td width="\&quot;133\&quot;">第一季度</td>
 <td width="\&quot;133\&quot;">第二季度</td>
 <td width="\&quot;133\&quot;">6月</td>
 <td width="\&quot;133\&quot;">7月</td>
 <td width="\&quot;133\&quot;">8月</td>
-</tr>
-<tr>
 <td width="\&quot;133\&quot;">安省</td>
 <td width="\&quot;133\&quot;">73,200</td>
 <td width="\&quot;133\&quot;">71,000</td>
 <td width="\&quot;133\&quot;">84,700</td>
 <td width="\&quot;133\&quot;">72,500</td>
 <td width="\&quot;133\&quot;">69,300</td>
-</tr>
-<tr>
 <td width="\&quot;133\&quot;">卑诗省</td>
 <td width="\&quot;133\&quot;">41,700</td>
 <td width="\&quot;133\&quot;">43,200</td>
 <td width="\&quot;133\&quot;">48,000</td>
 <td width="\&quot;133\&quot;">37,600</td>
 <td width="\&quot;133\&quot;">33,500</td>
-</tr>
-<tr>
 <td width="\&quot;133\&quot;">全国总和</td>
 <td width="\&quot;133\&quot;">179,600</td>
 <td width="\&quot;133\&quot;">182,600</td>
 <td width="\&quot;133\&quot;">202,800</td>
 <td width="\&quot;133\&quot;">178,800</td>
 <td width="\&quot;133\&quot;">167,600</td>
-</tr>
-</tbody>
-</table>
 <p>在租房市场紧俏的时候，温哥华市政府今年6月份发现，该地区有约10,800个房子或公寓单元没人住。在市政府的要求下，卑诗省政府给了温哥华市征收住房空置税的权力。</p>
 <p><strong><b>行家有不同解读</b></strong></p>
 <p>一些市场分析师认为，家庭对购房的负担能力持续下降，加上联邦政府新的抵押贷款规则，加拿大的租房市场在未来几个月将面临更大的上涨压力。</p>
@@ -185,52 +127,40 @@
 <p>加拿大的城市正在用别的办法应对住房承受力下降问题。9月30日在多伦多召开的城市住房峰会，向联邦政府提出了全国住房策略的7个建议，包括通过专用的基金确保未来的廉价住房，增加对新的社会福利房及廉价住房的建设和支持。</p>
 <p>责任编辑：滕冬育</p>
 <p>&nbsp;</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988357.md#1">Airbnb民宿隐藏摄像头 专家支招应对</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988277.md#1">中共干预加国大选 华裔议员称中“美人计”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988313.md#1">优先考虑国安 加国滑铁卢大学与华为断交?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13988318.md#1">联邦公务员罢工结束 服务延误已成事实</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/3/n13987489.md#1">查尔斯肖像钞票明年英国流通 加国尚未表态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/3/n13987505.md#1">错领疫期福利没还 纳税人退税款被税局扣留</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/3/n13986870.md#1">藏身国际包裹 中国小猫“润”到加拿大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/3/n13986793.md#1">公务员罢工后复工 本周护照中心或排长龙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986750.md#1">查尔斯三世加冕前 加拿大发布新英国旅行警告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986749.md#1">保守党第一季筹款超自由党近500万元</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643014.md#1">安省车主花数万元买“新车”交车前就被偷过</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643016.md#1">竞争局警告企业：别搞“黑色星期五”假促销</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643012.md#1">举报热线7年 助加税局追回近4.9亿元逃税款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642471.md#1">大麻合法化6年 加政府税收超54亿 上瘾人数激增</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642452.md#1">卑诗省师生遭熊袭击 11伤3严重 涉事灰熊未找到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642389.md#1">震惊又心痛：节俭父亲40年积蓄 一个月全没了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642403.md#1">民调：加拿大收紧移民政策 获多数新移民支持</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642365.md#1">TikTok涉违反隐私法 加拿大用户可加入集体诉讼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642350.md#1">卡尼：不再奉行“女权主义外交政策”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14641716.md#1">TTC酝酿更多车站更名</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066904.md#1" target="_blank">信力建：谁抽去了中国人的脊梁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/1/n10446785.md#1" target="_blank">共产暴政录：从船王卢作孚自杀看中共劫财手段</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/4/15/n3229401.md#1">事无大小一切都是神安排 不要着急</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/4/n13965069.md#1">时空旅行指南：满族格格</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969694.md#1">【古道人生】代写离婚书差点失去做巡抚的福分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/29/n13984157.md#1">【未解之谜】前苏联飞碟奇闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13978877.md#1">遇道人指点平贼乱 晚唐官员顺天意而为</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987768.md#1">【时事军事】大战前夕 透视乌军主力步兵战车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987819.md#1">【有冇搞错】台海战争 中共面临存亡之道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/4/n13987931.md#1">【中国禁闻】习近平党内讲话 泄胡春华失势秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986307.md#1">【中国观察】“淄博烧烤”火爆背后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986698.md#1">韩正将参加英王加冕典礼？或引发外交风暴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986781.md#1">习近平要多种大豆保粮食安全 却处处碰壁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986796.md#1">台湾资深歌手杨小萍去世 享寿79岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/1/n13986097.md#1">周星驰将复出拍戏？田启文：合作演员将归队</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/1/n13986000.md#1">因欠债被限制高消费 李亚鹏搭机不成改乘火车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/2/n13986510.md#1">林志玲着流苏礼服状态佳 直言“无生2胎计划”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/1/n13986058.md#1">受骗经历被写进韩剧 汤唯被剧中人称“很有名”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/29/n13984163.md#1">受伤后冷敷还是冰敷？这一招让你恢复更快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982856.md#1">蜂蜜是天然抗生素！抗感染促愈合、有5大功效</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983843.md#1">悬壶不忘师恩的清代名医程士超</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981402.md#1">鳄梨油伪劣品居多 5窍门帮你买到健康油</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/28/n13983891.md#1">布置一个舒适的家 公寓装饰避开８个误区</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/20/n8413914.htm">加拿大10月租金急升 租房市场或持续紧俏</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/16/10/20/n8413914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/20/n8413914.htm">加拿大10月租金急升 租房市场或持续紧俏</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/16/10/20/n8413914.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
